--- a/ush project.html
+++ b/ush project.html
@@ -23,7 +23,7 @@ Is Slavery Acceptable? History Lesson
 		<header>
 			<hgroup>
 			<h1>Is Slavery Acceptable? History Lesson</h1>
-			<h2><img src="SlaveryDesign.png" alt="SlaveryDesign" /></h2>
+			<h2><img src="SlaveryDesign.png" /></h2>
 			</hgroup>
 		</header>
 </section>
@@ -62,4 +62,17 @@ Is Slavery Acceptable? History Lesson
 			</h2>
 		</p>
 	</aside>
+	
+		<p>
+			<h1> Note </h1>
+			<p>
+			This was created from nothing. Just with Code and uploading the code up to
+			the world wide web. Here is a picture of what the code looks like. You may
+			need to know some Web Design to understand. Enjoy. The Program we used was 
+			BBEdit. 
+			</p>
+			<h2>
+			<img src="USH code.png" />
+			</h2>
 </html>
+
